Formatting date and NotFound-View etc.

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -49,17 +49,6 @@ detailFolderContentTableFiletypeColumn=Filetype
 detailFolderContentTableFilesizeColumn=Filesize
 detailFolderContentTableLastModificationColumn=Last Modification
 
-#XGRP: Title for the  column in the Applications table
-detailFolderContentTableUoMColumn=
-
-#XGRP: Title for the  column in the Applications table
-detailFolderContentTableUnitNumberColumn=
-
-#XTIT: Send E-Mail subject
-shareSendEmailObjectSubject=<Email subject including object identifier PLEASE REPLACE ACCORDING TO YOUR USE CASE> {0}
-
-#YMSG: Send E-Mail message
-shareSendEmailObjectMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CASE> {0} (id: {1})\r\n{2}
 
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -67,10 +56,10 @@ shareSendEmailObjectMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CAS
 notFoundTitle=Not Found
 
 #YMSG: The Applicants not found text is displayed when there is no Applicants with this id
-noObjectFoundText=This Applicants is not available
+noObjectFoundText=This Folder doesn't exist
 
 #YMSG: The Applicants not available text is displayed when there is no data when starting the app
-noObjectsAvailableText=No Applicants are currently available
+noObjectsAvailableText=No Folders are currently available
 
 #YMSG: The not found text is displayed when there was an error loading the resource (404 error)
 notFoundText=The requested resource was not found
