--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,75 +1,40 @@
 # This is the resource bundle for Filebrowser
 
-#XTIT: Application name
 appTitle=Filebrowser
 
-#YDES: Application description
 appDescription=A filebrowser for the SCP documentservice
 
 #~~~ Master View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 masterTitle=Hierarchy
 
-#XTIT: Master view title with placeholder for the number of items
-masterTitleCount=Applicants ({0})
+masterSearchTooltip=Enter a Folders name or a part of it.
 
-#XTOL: Tooltip for the search field
-masterSearchTooltip=Enter an Applicants name or a part of it.
-
-#XBLI: text for a list with no data
 masterListNoDataText=No Applicants are currently available
-
-#XBLI: text for a list with no data with filter or search
-masterListNoDataWithFilterOrSearchText=No matching Applicants found
 
 
 #~~~ Detail View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-#XTIT: Detail view title
 detailTitle=Content
-
-#XTOL: Icon Tab Bar Info
-detailIconTabBarInfo=Info
-
-#XTOL: Icon Tab Bar Attachments
-detailIconTabBarAttachments=Attachments
-
-#XBLI: Text for the Applications table with no data
 detailFolderContentTableNoDataText=No Content
 
-#XTIT: Title of the Applications table
-detailFolderContentTableHeading=Content
-
-#XTIT: Title of the Applications table
-detailFolderContentTableHeadingCount=Content ({0})
-
-#XGRP: Title for the Status column in the Applications table
 detailFolderContentTableIDColumn=Name
 detailFolderContentTableFiletypeColumn=Filetype
 detailFolderContentTableFilesizeColumn=Filesize
 detailFolderContentTableLastModificationColumn=Last Modification
 
+detailCancelButton=Cancel
+detailSaveButton=Save
+
+detailUploadFileButton=Upload file
+detailCreateFolderButton=Create folder
 
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
 
-#XTIT: Not found view title
 notFoundTitle=Not Found
-
-#YMSG: The Applicants not found text is displayed when there is no Applicants with this id
-noObjectFoundText=This Folder doesn't exist
-
-#YMSG: The Applicants not available text is displayed when there is no data when starting the app
-noObjectsAvailableText=No Folders are currently available
-
-#YMSG: The not found text is displayed when there was an error loading the resource (404 error)
 notFoundText=The requested resource was not found
 
-#~~~ Not Available View ~~~~~~~~~~~~~~~~~~~~~~~
+noObjectFoundText=This Folder doesn't exist
 
-#XTIT: Master view title
-notAvailableViewTitle=Applicants
-
-#~~~ Error Handling ~~~~~~~~~~~~~~~~~~~~~~~
-
-#YMSG: Error dialog description
-errorText=Sorry, a technical error occurred! Please try again later.
+notAvailableViewTitle=Content
+noObjectsAvailableText=Repository is not available
