--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -26,6 +26,7 @@ detailFolderContentTableActionsColumn=Actions
 detailCancelButton=Cancel
 detailCreateButton=Create
 detailUploadButton=Upload
+detailSaveButton=Save
 
 detailUploadFileButton=Upload file
 detailCreateFolderButton=Create folder
